💄 デザイン修正

--- a/assets/sass/variables.scss
+++ b/assets/sass/variables.scss
@@ -4,4 +4,11 @@ $background-color: #F4EEE8;
 $primary: #114E60;
 $secondary: #325288;
 
-$header-title-font: 'Yuji Syuku', serif;
+$font-family: 'Noto Serif JP', serif;
+
+// fontsize
+$huge: 32px;
+$big: 28px;
+$normal: 24px;
+$small: 16px;
+$x-small: 14px;
