:lipstick: add card components

--- a/assets/sass/variables.scss
+++ b/assets/sass/variables.scss
@@ -4,7 +4,8 @@ $background-color: #F4EEE8;
 $primary: #114E60;
 $secondary: #325288;
 
-$font-family: 'Noto Serif JP', serif;
+$title-font: 'Noto Serif JP', serif;
+$body-font: 'Noto Sans JP', sans-serif;
 
 // fontsize
 $huge: 32px;
