✨ デザイン修正と問い合わせページ作成

--- a/assets/sass/variables.scss
+++ b/assets/sass/variables.scss
@@ -3,7 +3,7 @@
 $tablet: 640px;
 
 // variables
-$background-color: #f9f4ef;
+$background-color: #FDFDFD;
 $primary: #004643;
 $secondary: #abd1c6;
 $button: #f9bc60;
