--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -6,3 +6,37 @@ body {
   font-family: 'Hiragino Kaku Gothic ProN', 'Helvetica Neue', Arial,
     'Hiragino Sans', Meiryo, sans-serif;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  a {
+    text-decoration: none;
+    color: $text-color--body;
+  }
+}
+
+h2 {
+  font-size: 24px;
+  margin-top: 24px;
+}
+
+a {
+  color: $text-color--link;
+}
+
+pre {
+  background-color: $background-color--code-dark;
+  padding: 16px;
+}
+
+p > code {
+  color: $text-color--code;
+  background-color: $background-color--body;
+  border-radius: 4px;
+  padding: 4px;
+  margin: 0 4px;
+}
