:adhesive_bandage: モバイル対応

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -32,6 +32,8 @@ pre {
   background-color: $background-color--code-dark;
   padding: 16px;
   white-space: pre-wrap;
+  overflow-x: scroll;
+  width: 100%;
 }
 
 p > code {
